[build-system]
requires = [
  "setuptools>=70.0",
  "build==1.2.2"
]
build-backend = "setuptools.build_meta"

[project]
name = "mgl869"
version = "0.1.4"
authors = [
  { name="Hussein Nahle", email="hussein.nahle.1@etsmtl.ca" },
]
description = "Demo MGL869"
readme = "README.md"
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "pytest==8.3.3",
  "rich==13.7.1",
]

[project.urls]
"Homepage" = "https://github.com/husseinnahle/MGL869"
"Bug Tracker" = "https://github.com/husseinnahle/MGL869/issues"
